--- a/src/App.css
+++ b/src/App.css
@@ -66,8 +66,9 @@
 #searchButton{
   margin-left: 1vh;
 }
-#userText{
+.userText{
   margin-right: 3vh;
+  display: inline;
 }
 .book-list{
   padding-top: 10vh;
@@ -122,4 +123,11 @@
   justify-content: center;
   align-items: center;
   height: 350px;
+}
+
+.modal-backdrop {
+  background-color: green;
+}
+.my-modal .modal-content {
+  background-color: red;
 }
